--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
@@ -17,65 +17,73 @@
 			</tml:range>
 		</tml:[form-field]>	
 		
-		<tml:script>
-			if(!tmlform.area){
-				tmlform.area = $option_areas.contains(AREA) ? AREA : $option_areas.get(0)
-			}
-		</tml:script>
-		<tml:[form-field] o_label="Einfügen" o_field="root_or_child" o_type="select" o_default="child" o_optionsitem="$option_root_or_child" o_changeaction="$refresh"/>
-		
-		<tml:case condition="tmlform.root_or_child=='root'">
-			<tml:[form-field] o_label="Bereich" o_field="area" o_type="select" o_optionsitem="$option_areas" o_changeaction="$refresh"/>
-		</tml:case>
-
-		<tml:case if="$mc.destinationChildren.size">
-			<tml:script>
-				_opts = ["Am Anfang der Liste|start", "Am Ende der Liste|end"]
-				var pages=[]
-				var children = $mc.destinationChildren(this, tmlform)
-				for(let doc in Iterator(children)){
-					if(!doc.mayReadContent())
-						continue;
-					var title = doc.title;
-					var c = context("docid:"+doc.getStructKey(), false)
-					if(c)
-						title = c.TITLE;
-					pages.push("Nach '" + WGA.encode("html", title) + "'|" + doc.getStructKey().toString())
-				}
-				_optgroups=null;
-				if(pages.length>1)
-					_optgroups = [{
-						label: "An definierter Position einfügen:",
-						options: pages
-					}]				
-			</tml:script>
-			<tml:[form-field] o_label="Position" o_name="position" o_type="select" o-optionvalues="_opts" o-optgroups="_optgroups"/>
-		</tml:case>
-		
-		<tml:{div} html_class="alert alert-danger" unless="$mc.isAllowedPageType">
-			Das Einfügen der Seite ist an dieser Stelle nicht erlaubt.
+		<tml:{div} html_class="alert alert-danger" unless="$mc.isPasteAllowed">
+			Das Einfügen der Seite ist mit Ihren Berechtigungen leider nicht möglich.<br>
+			Die Lese-/Schreibrechte der Seite in der Zwischenablage verhindern das Erstellen von Inhaltsversionen.<br> 
+			Erstellen Sie statt dessen eine neue Seite und fügen die Inhaltselemente in die neue Seite ein.
 		</tml:{div}>
 		
-		<tml:case if="$mc.isAllowedPageType">
-			<hr>
-			<tml:[form-field]>
-				<tml:input labeled="true" name="publish" type="boolean" options="Seite(n) veröffentlichen|true"/>
-				<br>
-				<tml:input labeled="true" name="recursive" type="boolean" options="[Unterseiten kopieren|true{item('$mc.isDestChildrenOfSource')?'$disabled':''}]"/>
-			</tml:[form-field]>
+		<tml:case if="$mc.isPasteAllowed">
+			<tml:script>
+				if(!tmlform.area){
+					tmlform.area = $option_areas.contains(AREA) ? AREA : $option_areas.get(0)
+				}
+			</tml:script>
+			<tml:[form-field] o_label="Einfügen" o_field="root_or_child" o_type="select" o_default="child" o_optionsitem="$option_root_or_child" o_changeaction="$refresh"/>
+			
+			<tml:case condition="tmlform.root_or_child=='root'">
+				<tml:[form-field] o_label="Bereich" o_field="area" o_type="select" o_optionsitem="$option_areas" o_changeaction="$refresh"/>
+			</tml:case>
+	
+			<tml:case if="$mc.destinationChildren.size">
+				<tml:script>
+					_opts = ["Am Anfang der Liste|start", "Am Ende der Liste|end"]
+					var pages=[]
+					var children = $mc.destinationChildren(this, tmlform)
+					for(let doc in Iterator(children)){
+						if(!doc.mayReadContent())
+							continue;
+						var title = doc.title;
+						var c = context("docid:"+doc.getStructKey(), false)
+						if(c)
+							title = c.TITLE;
+						pages.push("Nach '" + WGA.encode("html", title) + "'|" + doc.getStructKey().toString())
+					}
+					_optgroups=null;
+					if(pages.length>1)
+						_optgroups = [{
+							label: "An definierter Position einfügen:",
+							options: pages
+						}]				
+				</tml:script>
+				<tml:[form-field] o_label="Position" o_name="position" o_type="select" o-optionvalues="_opts" o-optgroups="_optgroups"/>
+			</tml:case>
+			
+			<tml:{div} html_class="alert alert-danger" unless="$mc.isAllowedPageType">
+				Das Einfügen der Seite ist an dieser Stelle nicht erlaubt.
+			</tml:{div}>
+			
+			<tml:case if="$mc.isAllowedPageType">
+				<hr>
+				<tml:[form-field]>
+					<tml:input labeled="true" name="publish" type="boolean" options="Seite(n) veröffentlichen|true"/>
+					<br>
+					<tml:input labeled="true" name="recursive" type="boolean" options="[Unterseiten kopieren|true{item('$mc.isDestChildrenOfSource')?'$disabled':''}]"/>
+				</tml:[form-field]>
+			</tml:case>
+	
+			<script>
+				require(["jquery", "select2"], function($){
+					$("#form-copy-pages select").select2({width:"100%"})
+				})
+			</script>
 		</tml:case>
-
-		<script>
-			require(["jquery", "select2"], function($){
-				$("#form-copy-pages select").select2({width:"100%"})
-			})
-		</script>
 		
 	</div>
 	
 	<div class="footer">
 		<a class="btn btn-default" data-modal="hide">Abbrechen</a>
-		<tml:button cssclass="btn btn-primary" clickaction="$mc.copyPages" if="$mc.isAllowedPageType">Erstellen</tml:button>
+		<tml:button cssclass="btn btn-primary" clickaction="$mc.copyPages" if="$mc.isAllowedPageType & $mc.isPasteAllowed">Erstellen</tml:button>
 	</div>
 	
 </tml:form>
