#00006127: New item editor "htmldate"

--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/main.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/main.tml
@@ -57,6 +57,7 @@
 			</div>
 
 			<div id="editor-panel-date" data-editor="true" style="display:none"></div>
+			<div id="editor-panel-htmldate" data-editor="true" style="display:none"></div>
 
 		</div>
 		
