--- a/OpenWGA/plugins/cm-neo/design/tml/html/no-content.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/no-content.tml
@@ -36,7 +36,7 @@
 					</tml:case>
 				}
 			}
-			window.parent.CM.pageLoaded(WGA.contentinfo)
+			window.parent.CM && window.parent.CM.pageLoaded(WGA.contentinfo)
 		</script>
 		<link rel="stylesheet" href="<tml:url type="css" name="styles"/>">
 	</head>
