#00006128: CM-Neo: show all available languages in panel "versions"

--- a/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-versions.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/sidebar/content-versions.tml
@@ -29,7 +29,7 @@
 				<legend>Andere Sprachen</legend>
 			{{/current_lang}}
 			{{#languages}}
-				<a href="{{url}}" data-wgakey="{{key}}">{{language}}</a>
+				<a href="{{url}}" data-wgakey="{{key}}" class="{{cssclass}}">{{language}}</a>
 			{{/languages}}
 		</fieldset>
 	{{/languages.length}}
