#00006132: Module "tiles": improved paddings for sub-tiles (tiles inside tiles)

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/css.tml
@@ -16,6 +16,17 @@
 			box_sizing: "border-box",
 			margin: 0,
 			padding: "10px",
+			
+			".module-cm_tiles": {
+				// Sub-Kacheln
+				"&:first-child .tile": {
+					padding_top: 0
+				},
+				"&:last-child .tile": {
+					padding_bottom: 0
+				}
+			},
+			
 			">.content":{
 				height: "100%",
 				box_sizing: "border-box",
