--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render-tile.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tiles/render-tile.tml
@@ -44,7 +44,7 @@
 	<@{_wrap_tag} @{_wrap_attribs encode="none"} class="content <tml:option name="module_classes"/>"
 		style="<tml:script>
 			var styles = [
-				"justify-content:"+CMM.setting('justify_content')
+				"justify-content:" + (CMM.setting('justify_content') || "flex-start"),
 			];
 			var image = CMM.setting("image")
 			if(image){
