--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/paste-page.tml
@@ -24,11 +24,13 @@
 		
 		<tml:case unless="_error">
 			<tml:script>
-				if(!tmlform.area){
+				if(!tmlform.area && $option_areas.size()){
 					tmlform.area = $option_areas.contains(AREA) ? AREA : $option_areas.get(0)
 				}
 			</tml:script>
-			<tml:[form-field] o_label="Einfügen" o_field="root_or_child" o_type="select" o_default="child" o_optionsitem="$option_root_or_child" o_changeaction="$refresh"/>
+			<tml:[form-field] o_label="Einfügen"
+				o_mode="{$option_root_or_child.length>1 ? 'edit':'view'}" 
+				o_field="root_or_child" o_type="select" o_default="child" o_optionsitem="$option_root_or_child" o_changeaction="$refresh"/>
 			
 			<tml:case condition="tmlform.root_or_child=='root'">
 				<tml:[form-field] o_label="Bereich" o_field="area" o_type="select" o_optionsitem="$option_areas" o_changeaction="$refresh"/>
