--- a/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/root.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/dialogs/create-page/root.tml
@@ -1,47 +1,32 @@
 <tml:form id="form-create-page" source="portlet" unless="_dialogClosed">
 
 	<tml:script>
-		setOption("current_lang", LANGUAGE);
-		setOption("default_pagetype", profile.last_used_contenttype || CONTENTTYPE);
-		var areas = WGA.createList();
-		var systemAreas = WGA.createList();
-		var allAreas = WGA.createList();
-		for(let area in Iterator(db().getAreas().values())){
-			if(area.name=="$templates"){
-				if(!WGA.app().isChiefEditor())
-					continue;
-			}
-			else if(area.systemArea)
-				continue;
-			if(area.name=="hdb-content" && !WGA.app().isManager())
-				continue;
-			var visiblefor = area.getExtensionData("CM_area_visible")
-			if(visiblefor && visiblefor.size() && !db().isMemberOfUserList(visiblefor))
-				continue;
-			if(!area.mayEditPages())
-				continue;
-			if(area.mayReadContent()){
-				allAreas.add(area.name)
-				if(area.name=="$templates")
-					systemAreas.add("Seitenvorlagen|" + area.name)
-				else areas.add(area.name)
-			}
+		
+		var areas = WGA.List();
+		var systemAreas = WGA.List();
+		var allAreas = App.getAllowedAreas(db().getDbReference());
+		
+		for(let area in Iterator(allAreas)){
+			if(area.name=="$templates")
+				systemAreas.add("Seitenvorlagen|" + area.name)
+			else areas.add(area.name)		
 		}
 		
 		WGA.TMLPage.setVar("_areas", areas)
-		WGA.TMLPage.setVar("_optgroups", [
-			{
-				label: "Systembereiche",
-				options: systemAreas
-			}
-		])
+		if(systemAreas.size())
+			WGA.TMLPage.setVar("_optgroups", [
+				{
+					label: "Systembereiche",
+					options: systemAreas
+				}
+			])
 
 		if(!tmlform.submitted){
 			var struct;
 			if(document instanceof Packages.de.innovationgate.webgate.api.WGStructEntry)
 				struct = document;
 			else struct = !document.isDummy() && document.getStructEntry();
-			if(struct && allAreas.contains(struct.getArea().name))
+			if(struct && allAreas.contains(struct.getArea()))
 				tmlform.area = struct.getArea().name
 			else if(areas.size())
 				tmlform.area = areas.get(0);
@@ -66,7 +51,6 @@
 			o_changeaction="$refresh" 
 			o_mode="{_areasCount==1 ? 'view':'edit'}"/>
 		<tml:case condition="tmlform.area && db().getArea(tmlform.area).getRootEntries().size()">
-			<tml:comment><tml:[form-field] o_label="Position" o_name="position" o_type="select" o_options="Am Anfang der Liste|start,Am Ende der Liste|end"/></tml:comment>
 			
 			<tml:script>
 				_opts = ["Am Anfang der Liste|start", "Am Ende der Liste|end"]
