type Life -> Live

--- a/OpenWGA/plugins/admin/design/tml/html/home/server-info/mod-java.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/home/server-info/mod-java.tml
@@ -59,7 +59,7 @@
 				</div>		
 				<div class="clear"></div>
 				<div class="data">
-					<button data-action="life">Show Life Data</button>
+					<button data-action="life">Show Live Data</button>
 				</div>		
 				<div class="clear"></div>
 			</div>
